--- a/style/style.css
+++ b/style/style.css
@@ -119,7 +119,8 @@ header ul li button:hover {
 footer ul{
     display: flex;
     justify-content: space-evenly;
-    margin-top: 100px
+    margin-top: 100px;
+    padding-left: 0;
 }
 
 footer ul li {
