--- a/style/style.css
+++ b/style/style.css
@@ -260,8 +260,6 @@ footer ul li {
     }
 
     .block1, .block2 {
-        scale: 0.7;
-        width: 300px;
-        height: 300px;
+    display: none;
     }
 }
