--- a/style/style.css
+++ b/style/style.css
@@ -254,11 +254,9 @@ footer ul li {
         font-size: 100px;
     }
 
-    .blocks {
-        display: none;
-    }
-
     .block1, .block2 {
-    display: none;
+        scale: 0.7;
+        width: 300px;
+        height: 300px;
     }
 }
